@@ -237,7 +237,7 @@ public class URLCodecTest {
         assertEquals( "Encoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             urlCodec.encode( dObj );
             fail( "Trying to url encode a Double object should cause an exception.");
         } catch (final EncoderException ee) {
@@ -283,7 +283,7 @@ public class URLCodecTest {
         assertEquals( "Decoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             urlCodec.decode( dObj );
             fail( "Trying to url encode a Double object should cause an exception.");
         } catch (final DecoderException ee) {
